use https://github.com/timniederhausen/gn-build for config gn

--- a/TextQuery/main/BUILD.gn
+++ b/TextQuery/main/BUILD.gn
@@ -3,4 +3,8 @@ executable("main") {
     "main.cpp",
     "TextQuery.cpp",
   ]
+
+  cflags_cc = [ "-std=c++14" ]
+  
+  include_dirs = [ "//", "//main" ]
 }
