add a complex class operator overload

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3,5 +3,6 @@ group("executable") {
              "//test_rvo:RVO",
              "//test_rvo:noRVO",
              "//test_rvo:throw_exception",
+             "//complex:complex_main",
           ]
 }
