--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1,8 +1,10 @@
 group("executable") {
-    deps = [ "//test_rvo:main",
-             "//test_rvo:RVO",
-             "//test_rvo:noRVO",
-             "//test_rvo:throw_exception",
-             "//complex:complex_main",
+    deps = [ 
+              "//TextQuery",
+              "//test_rvo:main",
+              "//test_rvo:RVO",
+              "//test_rvo:noRVO",
+              "//test_rvo:throw_exception",
+              "//complex:complex_main",
           ]
 }
