add a reference version of complex class

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -6,5 +6,6 @@ group("executable") {
               "//test_rvo:noRVO",
               "//test_rvo:throw_exception",
               "//complex:complex_main",
+              "//complex:complex_ref_main",
           ]
 }
