add a template version of complex class.

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -7,5 +7,6 @@ group("executable") {
               "//test_rvo:throw_exception",
               "//complex:complex_main",
               "//complex:complex_ref_main",
+              "//complex:complex_template_main",
           ]
 }
