add explicit copy constructor for type conversion.

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -8,5 +8,6 @@ group("executable") {
               "//complex:complex_main",
               "//complex:complex_ref_main",
               "//complex:complex_template_main",
+              "//complex:complex_template_x_main",
           ]
 }
