--- a/BUILD.gn
+++ b/BUILD.gn
@@ -10,6 +10,7 @@ group("executable") {
               "//complex:complex_template_main",
               "//complex:complex_template_x_main",
               "//ref_count:ref_count_string",
+              "//ref_count:RC_obj_test",
           ]
     if (is_win) {
         deps -=  ["//ref_count:ref_count_string" ]
