--- a/BUILD.gn
+++ b/BUILD.gn
@@ -15,6 +15,8 @@ group("executable") {
               "//polymorphism:shape_polymorphism",
           ]
     if (is_win) {
-        deps -=  ["//ref_count:ref_count_string" ]
+        deps -=  ["//ref_count:ref_count_string",
+                   "//ref_count:RC_obj_test", 
+                ]
     }
 }
