add a variadic template example

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -16,6 +16,7 @@ group("executable") {
               "//unorderedMap:UnorderedMapObjectAsKey",
               "//unorderedMap:20210601_test",
               "//tests:cpu_test",
+              "//variadic:variadic_test",
           ]
     if (is_win) {
         deps -=  ["//ref_count:ref_count_string",
