--- a/BUILD.gn
+++ b/BUILD.gn
@@ -19,6 +19,7 @@ group("executable") {
               "//variadic:variadic_test",
               "//variadic:tuple_test",
               "//rvalue_ref:mystring_test",
+              "//allocator:allocator_test",
           ]
     if (is_win) {
         deps -=  ["//ref_count:ref_count_string",
