--- a/BUILD.gn
+++ b/BUILD.gn
@@ -20,6 +20,7 @@ group("executable") {
               "//variadic:tuple_test",
               "//rvalue_ref:mystring_test",
               "//allocator:allocator_test",
+              "//designPattern:designPatterns",
           ]
     if (is_win) {
         deps -=  ["//ref_count:ref_count_string",
