--- a/designPattern/BUILD.gn
+++ b/designPattern/BUILD.gn
@@ -1,5 +1,6 @@
 group("designPatterns") {
   deps = [ 
     "//designPattern/TemplateMethod:test_templateMethod",
+    "//designPattern/strategy:test_strategy_dynamic",
   ]
 }
