--- a/designPattern/command/BUILD.gn
+++ b/designPattern/command/BUILD.gn
@@ -7,3 +7,13 @@ executable("test_ace_command") {
   
   include_dirs = [ "//", "//designPattern/command" ]
 }
+
+executable("test_bank_command") {
+  sources = [
+    "command_bank.cpp",
+  ]
+
+  cflags_cc = [ "-std=c++14" ]
+  
+  include_dirs = [ "//", "//designPattern/command" ]
+}
