add example for application/document framework + template method + command

--- a/designPattern/command/BUILD.gn
+++ b/designPattern/command/BUILD.gn
@@ -17,3 +17,13 @@ executable("test_bank_command") {
   
   include_dirs = [ "//", "//designPattern/command" ]
 }
+
+executable("test_app_framework_command") {
+  sources = [
+    "command_app_framework.cpp",
+  ]
+
+  cflags_cc = [ "-std=c++14" ]
+  
+  include_dirs = [ "//", "//designPattern/command" ]
+}
