--- a/designPattern/BUILD.gn
+++ b/designPattern/BUILD.gn
@@ -5,5 +5,6 @@ group("designPatterns") {
     "//designPattern/strategy:test_strategy_static",
     "//designPattern/command:test_ace_command",
     "//designPattern/command:test_bank_command",
+    "//designPattern/command:test_app_framework_command",
   ]
 }
