--- a/designPattern/BUILD.gn
+++ b/designPattern/BUILD.gn
@@ -7,5 +7,6 @@ group("designPatterns") {
     "//designPattern/command:test_bank_command",
     "//designPattern/command:test_app_framework_command",
     "//designPattern/command:test_command_app_fw_factory",
+    "//designPattern/command:test_cmd_app_fw_factory_singleton",
   ]
 }
