--- a/designPattern/BUILD.gn
+++ b/designPattern/BUILD.gn
@@ -14,5 +14,6 @@ group("designPatterns") {
     "//designPattern/factory:test_af_shape",
     "//designPattern/factory:test_af_hotdrink",
     "//designPattern/builder:test_simpleBuilder",
+    "//designPattern/builder:test_innerBuilder",
   ]
 }
