--- a/designPattern/builder/BUILD.gn
+++ b/designPattern/builder/BUILD.gn
@@ -18,6 +18,16 @@ executable("test_innerBuilder") {
   include_dirs = [ "//", "//designPattern/builder" ]
 }
 
+executable("test_fluentBuilder") {
+  sources = [
+    "fluentBuilder.cpp",
+  ]
+
+  cflags_cc = [ "-std=c++14" ]
+  
+  include_dirs = [ "//", "//designPattern/builder" ]
+}
+
 executable("test_personBuilder") {
   sources = [
     "person.cpp",
